deploy: 3c632f8da3cfa5b1802fc8b5bbbc7dc54e90125e

--- a/iframe.html
+++ b/iframe.html
@@ -396,7 +396,7 @@
 
 
 <script defer data-domain="scottnath.com" src="https://plausible.io/js/script.js"></script>
-    <script type="module" crossorigin src="./assets/iframe-DFIFbNh_.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Tnc8fvlD.js"></script>
   </head>
 
   <body>
